syntax = "proto3";

option go_package = "confproto";

package confproto;

service getInfo{
    rpc PlayGame (GameRequest) returns (GameReply){}
}

message GameRequest {
  int32 gameid = 1;
  int32 players = 2;
}

message GameReply {
  string response = 1;
}
